[tool.poetry]
name = "RocketLeagueStreamingScripts"
version = "0.1.0"
description = "Test streaming scripts"
authors = ["James Alford-Golojuch <jamesag26@gmail.com>", "Franklin Durbin <FranklinADurbin@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
